# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  ast.py  ast_builder.py  cli.py  diff.py  file.py  gendiff.py  generator.py  parser.py
gendiff/format/: __init__.py  default.py  json.py  plain.py
gendiff/renderers/: __init__.py  json.py  jsonlike.py  plain.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_gendiff.py  test_generate_diff.py  test_generator.py
tests/fixtures/: after.yml  before.json  expected.json  expected.txt  expected_flat.txt  expected_nested.json  expected_nested.txt  expected_plain.txt  nested_new.json  nested_old.yml
