[tool.poetry]
name = "SHARKVOICE_gendiff"
version = "0.1.4"
description = "A CLI utility finding the differences in configuration files."
authors = ["sharkvoice <sharknoise@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
